Merge core and api into a single module (since they cannot be separated anyway)