@@ -216,117 +216,6 @@
         <property name="version" value="UNKNOWN"/>
     </target>
 
-    <!-- core module -->
-
-    <target name="core.compile.depcheck">
-        <mkdir dir="core/target/main"/>
-        <uptodate property="core.compile.uptodate" targetfile="core/target/main/.lastcompile">
-            <srcfiles dir="core/src/main/java">
-                <include name="**/"/>
-                <include name="**/*.java"/>
-                <exclude name="**/.*"/>
-            </srcfiles>
-        </uptodate>
-    </target>
-
-    <target name="core.compile" depends="core.compile.depcheck" unless="core.compile.uptodate">
-        <mkdir dir="core/target/main/classes"/>
-        <javac
-                source="${javac.source}"
-                target="${javac.target}"
-                srcdir="core/src/main/java"
-                destdir="core/target/main/classes"
-                debug="true">
-            <compilerarg value="-Xlint:unchecked"/>
-            <classpath>
-                <path refid="api.classpath"/>
-            </classpath>
-        </javac>
-        <touch file="core/target/main/.lastcompile" verbose="false"/>
-    </target>
-
-    <target name="core.test.compile.depcheck">
-        <mkdir dir="core/target/test"/>
-        <uptodate property="core.compile.uptodate" targetfile="core/target/test/.lastcompile">
-            <srcfiles dir="core/src/test/java">
-                <include name="**/"/>
-                <include name="**/*.java"/>
-                <exclude name="**/.*"/>
-            </srcfiles>
-        </uptodate>
-    </target>
-
-    <target name="core.test.compile" depends="lib.junit,core.compile,core.test.compile.depcheck" unless="core.test.compile.uptodate">
-        <mkdir dir="core/target/test/classes"/>
-        <javac
-                source="${javac.source}"
-                target="${javac.target}"
-                srcdir="core/src/test/java"
-                destdir="core/target/test/classes"
-                debug="true">
-            <compilerarg value="-Xlint:unchecked"/>
-            <classpath>
-                <path refid="api.classpath"/>
-                <path refid="core.classpath"/>
-                <path refid="testing-support.classpath"/>
-                <pathelement location="${lib.junit.local}"/>
-            </classpath>
-        </javac>
-        <touch file="core/target/test/.lastcompile" verbose="false"/>
-    </target>
-
-    <target name="core.test.pseudotarget">
-        <echo message="============================================="/>
-        <echo message="${message}"/>
-        <echo message="============================================="/>
-        <mkdir dir="core/target/test-results"/>
-        <junit printsummary="true" fork="yes" includeantruntime="true">
-            <sysproperty key="build.home" value="${basedir}"/>
-            <sysproperty key="ant.library.dir" value="${ant.home}/lib"/>
-            <sysproperty key="lib.junit.local" value="${lib.junit.local}"/>
-            <sysproperty key="lib.marshalling-api.local" value="${lib.marshalling-api.local}"/>
-            <sysproperty key="lib.xnio-api.local" value="${lib.xnio-api.local}"/>
-            <jvmarg line="${test.jvmargs}"/>
-            <formatter type="plain" extension="${extension}"/>
-            <classpath>
-                <path refid="api.classpath"/>
-                <path refid="core.classpath"/>
-                <path refid="testing-support.classpath"/>
-                <pathelement location="core/target/test/classes"/>
-                <path refid="lib.junit.classpath"/>
-            </classpath>
-            <batchtest fork="yes" todir="core/target/test-results"
-                       haltonfailure="no">
-               <fileset dir="core/target/test/classes">
-                   <include name="**/*TestCase.class"/>
-               </fileset>
-            </batchtest>
-        </junit>
-    </target>
-
-    <target name="core.test" depends="api,core,testing-support,core.test.compile">
-        <antcall inheritall="true" inheritrefs="true" target="core.test.pseudotarget">
-            <param name="extension" value=".txt"/>
-            <param name="message" value="Running with no security manager"/>
-            <param name="test.jvmargs" value="-Ddummy=dummy"/>
-        </antcall>
-        <antcall inheritall="true" inheritrefs="true" target="core.test.pseudotarget">
-            <param name="extension" value="-security.txt"/>
-            <param name="message" value="Running with security manager"/>
-            <param name="test.jvmargs" value="-Djava.security.manager=org.jboss.remoting.test.support.LoggingSecurityManager -Djava.security.policy=${basedir}/testing-support/src/main/resources/testing.policy"/>
-        </antcall>
-    </target>
-
-    <target name="core.clean">
-        <delete dir="core/target"/>
-    </target>
-
-    <target name="core" description="Build the core module" depends="api,core.compile">
-        <path id="core.classpath">
-            <pathelement location="core/target/main/classes"/>
-        </path>
-    </target>
-
     <!-- samples module -->
 
     <target name="samples.compile.depcheck">
@@ -413,8 +302,8 @@
     <!-- ============================================== -->
 
     <target name="api-jar" description="Build the API JAR" depends="api">
-        <delete file="jboss-remoting-api.jar"/>
-        <jar jarfile="jboss-remoting-api.jar">
+        <delete file="jboss-remoting.jar"/>
+        <jar jarfile="jboss-remoting.jar">
             <manifest>
                 <attribute name="Created-By" value="${java.vm.version} (${java.vm.vendor})"/>
                 <attribute name="Specification-Title" value="JBoss Remoting"/>
@@ -433,8 +322,8 @@
     </target>
 
     <target name="api-source-jar" description="Build the API source JAR" depends="api">
-        <delete file="jboss-remoting-api-source.jar"/>
-        <jar jarfile="jboss-remoting-api-source.jar">
+        <delete file="jboss-remoting-source.jar"/>
+        <jar jarfile="jboss-remoting-source.jar">
             <manifest>
                 <attribute name="Created-By" value="${java.vm.version} (${java.vm.vendor})"/>
                 <attribute name="Specification-Title" value="JBoss Remoting Source"/>
@@ -452,51 +341,11 @@
         </jar>
     </target>
 
-    <target name="core-jar" description="Build the Core JAR" depends="core">
-        <delete file="jboss-remoting-core.jar"/>
-        <jar jarfile="jboss-remoting-core.jar">
-            <manifest>
-                <attribute name="Created-By" value="${java.vm.version} (${java.vm.vendor})"/>
-                <attribute name="Specification-Title" value="JBoss Remoting"/>
-                <attribute name="Specification-Version" value="${version}"/>
-                <attribute name="Specification-Vendor" value="JBoss (http://www.jboss.org/)"/>
-                <attribute name="Implementation-Title" value="JBoss Remoting (Core)"/>
-                <attribute name="Implementation-URL" value="http://labs.jboss.org/jbossremoting/"/>
-                <attribute name="Implementation-Version" value="${version}"/>
-                <attribute name="Implementation-Vendor" value="JBoss, a division of Red Hat, Inc."/>
-                <attribute name="Implementation-Vendor-Id" value="http://www.jboss.org"/>
-            </manifest>
-            <zipfileset dir="core/target/main/classes">
-                <include name="**/*.class"/>
-            </zipfileset>
-        </jar>
-    </target>
-
-    <target name="core-source-jar" description="Build the Core source JAR" depends="core">
-        <delete file="jboss-remoting-core-source.jar"/>
-        <jar jarfile="jboss-remoting-core-source.jar">
-            <manifest>
-                <attribute name="Created-By" value="${java.vm.version} (${java.vm.vendor})"/>
-                <attribute name="Specification-Title" value="JBoss Remoting Source"/>
-                <attribute name="Specification-Version" value="${version}"/>
-                <attribute name="Specification-Vendor" value="JBoss (http://www.jboss.org/)"/>
-                <attribute name="Implementation-Title" value="JBoss Remoting Source (Core)"/>
-                <attribute name="Implementation-URL" value="http://labs.jboss.org/jbossremoting/"/>
-                <attribute name="Implementation-Version" value="${version}"/>
-                <attribute name="Implementation-Vendor" value="JBoss, a division of Red Hat, Inc."/>
-                <attribute name="Implementation-Vendor-Id" value="http://www.jboss.org"/>
-            </manifest>
-            <zipfileset dir="core/src/main/java">
-                <include name="**/*.java"/>
-            </zipfileset>
-        </jar>
-    </target>
-
     <!-- ============================================== -->
     <!-- JAVADOCS                                       -->
     <!-- ============================================== -->
 
-    <target name="api-javadoc" description="Build the API JavaDoc" depends="api,core,lib.apiviz,lib.marshalling-api,lib.xnio-api">
+    <target name="api-javadoc" description="Build the API JavaDoc" depends="api,lib.apiviz,lib.marshalling-api,lib.xnio-api">
         <delete dir="api/target/main/docs"/>
         <mkdir dir="api/target/main/docs"/>
         <javadoc destdir="api/target/main/docs" author="false" version="false" use="false" windowtitle="JBoss Remoting API">
@@ -510,7 +359,6 @@
             <link href="http://docs.jboss.org/xnio/1.2.0.GA/api/"/>
             <link href="http://docs.jboss.org/river/1.0.0.GA/api/"/>
             <classpath>
-                <path refid="core.classpath"/>
                 <path refid="api.classpath"/>
             </classpath>
         </javadoc>
@@ -532,15 +380,13 @@
     <!-- Distribution target                            -->
     <!-- ============================================== -->
 
-    <target name="dist" description="Build distribution zip file" depends="api-jar,api-source-jar,api-javadoc-zip,core-jar,core-source-jar">
+    <target name="dist" description="Build distribution zip file" depends="api-jar,api-source-jar,api-javadoc-zip">
         <delete file="jboss-remoting.zip"/>
         <zip zipfile="jboss-remoting.zip">
             <zipfileset dir="${basedir}">
                 <include name="COPYING.txt"/>
                 <include name="jboss-remoting-api.jar"/>
                 <include name="jboss-remoting-api-source.jar"/>
-                <include name="jboss-remoting-core.jar"/>
-                <include name="jboss-remoting-core-source.jar"/>
                 <include name="jboss-remoting-javadoc.zip"/>
             </zipfileset>
         </zip>
@@ -552,18 +398,18 @@
     <!-- core -->
 
     <!--<target name="all-core" description="Build all core targets" depends="api,core,samples,testing-support"/>-->
-    <target name="all-core" description="Build all core targets" depends="api,core,testing-support"/>
+    <target name="all-core" description="Build all core targets" depends="api,testing-support"/>
 
     <!-- JARs: These should be the second-to-last targets in the file -->
 
-    <target name="all-jars" description="Build all the JARs" depends="api-jar,core-jar"/>
+    <target name="all-jars" description="Build all the JARs" depends="api-jar"/>
 
     <!-- all: These should be the last targets in the file -->
 
     <target name="all" description="Build everything" depends="all-core,all-jars,api-javadoc"/>
 
-    <target name="clean" description="Clean out all build files" depends="api.clean,core.clean,samples.clean,testing-support.clean"/>
+    <target name="clean" description="Clean out all build files" depends="api.clean,samples.clean,testing-support.clean"/>
 
-    <target name="test" description="Run all tests" depends="api.test,core.test"/>
+    <target name="test" description="Run all tests" depends="api.test"/>
 
 </project>
